# extra/fe/apiserver/feservice.go
@@ -2,6 +2,7 @@ package apiserver
 
 import (
 	"io/ioutil"
+	"os"
 	"path/filepath"
 
 	"golang.org/x/net/context"
@@ -11,6 +12,7 @@ import (
 	"github.com/nyaxt/otaru/apiserver"
 	"github.com/nyaxt/otaru/cli"
 	"github.com/nyaxt/otaru/extra/fe/pb"
+	"github.com/nyaxt/otaru/logger"
 	otarupb "github.com/nyaxt/otaru/pb"
 )
 
@@ -23,12 +25,16 @@ func (s *feService) ListHosts(ctx context.Context, req *pb.ListHostsRequest) (*p
 	return &pb.ListHostsResponse{Host: s.hnames}, nil
 }
 
+func (s *feService) realPath(apiPath string) string {
+	return filepath.Join(s.localRootPath, filepath.Clean("/"+apiPath))
+}
+
 func (s *feService) ListLocalDir(ctx context.Context, req *pb.ListLocalDirRequest) (*pb.ListLocalDirResponse, error) {
 	if s.localRootPath == "" {
 		return nil, grpc.Errorf(codes.FailedPrecondition, "Local filesystem operations disabled.")
 	}
 
-	path := filepath.Join(s.localRootPath, filepath.Clean("/"+req.Path))
+	path := s.realPath(req.Path)
 
 	fis, err := ioutil.ReadDir(path)
 	if err != nil {
@@ -51,6 +57,39 @@ func (s *feService) ListLocalDir(ctx context.Context, req *pb.ListLocalDirReques
 	}
 
 	return &pb.ListLocalDirResponse{Entry: es}, nil
+}
+
+func (s *feService) MoveLocal(ctx context.Context, req *pb.MoveLocalRequest) (*pb.MoveLocalResponse, error) {
+	if s.localRootPath == "" {
+		return nil, grpc.Errorf(codes.FailedPrecondition, "Local filesystem operations disabled.")
+	}
+
+	pathSrc := s.realPath(req.PathSrc)
+	pathDest := s.realPath(req.PathDest)
+
+	logger.Infof(mylog, "MoveLocal %q -> %q", pathSrc, pathDest)
+
+	_, err := os.Stat(pathSrc)
+	if err != nil {
+		if os.IsNotExist(err) {
+			return nil, grpc.Errorf(codes.FailedPrecondition, "Source path doesn't exist.")
+		}
+		return nil, grpc.Errorf(codes.Internal, "Error Stat()ing source path: %v", err)
+	}
+
+	_, err = os.Stat(pathDest)
+	if err == nil {
+		return nil, grpc.Errorf(codes.FailedPrecondition, "Destination path already exists.")
+	}
+	if !os.IsNotExist(err) {
+		return nil, grpc.Errorf(codes.Internal, "Error Stat()ing destination path: %v", err)
+	}
+
+	// if err := os.Rename(pathSrc, pathDest); err != nil {
+	// 	return nil, grpc.Errorf(code.Internal, "Error os.Rename(): %v", err)
+	// }
+
+	return &pb.MoveLocalResponse{}, nil
 }
 
 func genHostNames(cfg *cli.CliConfig) []string {
